loom/crates/loom-templates/tests/snapshots/snapshots__todo_new_snapshot.snap
---
source: crates/loom-templates/tests/snapshots.rs
expression: ctx.render().unwrap()
---
# Task Decomposition

You are decomposing a specification into implementable tasks. Your goal is to
create a beads molecule (epic + child issues) that breaks down the work.

## Context Pinning

First, read the project overview to understand project terminology and context:

# Project Overview

Loom orchestrates the spec-to-implementation workflow.

## Current Feature

Label: loom-harness
Spec file: specs/loom-harness.md

## Specification Content

Read the spec at `specs/loom-harness.md` for full content before decomposing.

## Companions

The following companion directories are in scope. Read each one's `manifest.md` on demand:

- lib/sandbox/


## Scratchpad

You have a per-session scratchpad at `.wrapix/loom/scratch/<key>/scratch.md`,
where `<key>` is your session's concurrency unit — the spec label for `loom
plan` / `loom todo` sessions, the bead ID for `loom run` / `loom check` /
`loom msg` sessions. The file starts empty; append to it as the session
progresses.

**Purpose.** This is a **compaction-recovery aid, not durable storage.** The
file lives only for the lifetime of this session: the driver creates it at
session start and removes it at session end on every exit path. After
compaction, the harness re-pins the original prompt plus the scratchpad's
current contents so you regain the working notes you would otherwise have
lost.

**What to append:**

- Decisions you have made and the reasoning that tipped them, so you do not
  re-litigate them after compaction.
- Open questions you are tracking and what would resolve them.
- TODOs for the remainder of this session — files to touch next, checks to
  re-run, follow-ups inside this session's scope.
- Hypotheses you have already ruled out (with the evidence), so you do not
  re-explore them.

**What NOT to put here.** Anything that needs to outlive this session belongs
in a durable destination, not the scratchpad:

- Decisions, design rationale, or open questions that future sessions need →
  bead notes (`bd update <id> --notes "..."`) or the spec file (`specs/<label>.md`).
- Implementation context for future agents → spec file or `CLAUDE.md` /
  companion docs.
- Why a change was made → the commit message.
- Cross-session follow-up work → a new bead (`bd create ...`).

The scratchpad will be deleted when this session ends. If a thought is worth
keeping past session end, write it to one of the durable destinations above
**before** you finish.

**How to append.** Append to the file directly — for example,
`echo "..." >> .wrapix/loom/scratch/<key>/scratch.md` or via the Edit tool.
Do not rewrite or truncate prior contents; the recovery payload is the full
running log.

## Implementation Notes

- Remove rustup bootstrap block
- Use fenix fromToolchainFile


## Task Breakdown Guidelines

- Each task should be **self-contained** with enough context for a fresh agent
- Order tasks by **dependencies** (what must be done first)
- Keep tasks **focused** - one clear objective per task
- Include **test tasks** where appropriate
- Consider: setup, implementation, tests, documentation
- **Assign profile per-task** based on what that specific task needs

## Profile Assignment

Each task needs a `profile:X` label to select the right container toolchain in `loom run`:

| Task Type | Profile | When to Use |
|-----------|---------|-------------|
| Rust implementation | `profile:rust` | Tasks touching `.rs` files or using cargo |
| Python implementation | `profile:python` | Tasks touching `.py` files or using pytest/pip |
| Nix/shell/docs | `profile:base` | Tasks touching only `.nix`, `.sh`, `.md` files |

Different tasks in the same molecule can have different profiles. Assign based on what each specific task needs.

## Instructions

1. **Analyze the spec** - Understand all requirements and affected files
2. **Create the epic** (molecule root) and **store its ID**:
   ```bash
   MOLECULE_ID=$(bd create --type=epic --title="<feature name>" --labels="spec:loom-harness" --silent)
   echo "Created molecule: $MOLECULE_ID"
   ```
   **CRITICAL:** Use the exact ID returned by `bd create --silent`. Do NOT substitute
   a molecule ID from the spec index or any other source — `bd create` generates a
   unique ID and that is the only valid value.
3. **Create child tasks** with `--parent` and appropriate `profile:X` label:
   ```bash
   TASK_ID=$(bd create --title="<task title>" --description="<detailed description>" \
     --type=task --labels="spec:loom-harness,profile:rust" --parent="$MOLECULE_ID" --silent)
   ```
4. **Set execution order** with `bd dep add` for tasks that must run sequentially:
   ```bash
   bd dep add <later-task> <earlier-task>  # later-task waits for earlier-task
   ```

### Key Concepts

| Mechanism | Purpose | Effect |
|-----------|---------|--------|
| `--parent` | Links task to molecule | Enables `loom status` progress tracking |
| `bd dep add` | Sets execution order | Controls what `bd ready` returns next |
| `profile:X` | Selects container profile | Determines toolchain available in `loom run` |

Both `--parent` and `bd dep add` are required: `--parent` for visibility, `bd dep add` for ordering.

## Output Format

After creating all tasks:

1. List the epic ID and all task IDs created
2. Show the dependency graph
3. Confirm the molecule was created

## Exit Signals

Output ONE of these at the end of your response:

- `LOOM_COMPLETE`
- `LOOM_BLOCKED`
- `LOOM_CLARIFY`

- `LOOM_COMPLETE` — All tasks created, dependencies set, molecule created. No payload.
- `LOOM_BLOCKED` — Cannot decompose spec (missing information, unclear
  requirements). Write the reason **before** the marker on its own line(s);
  emit `LOOM_BLOCKED` as the final line with nothing after it.
