loom/crates/loom-templates/tests/snapshots/snapshots__todo_update_snapshot.snap
---
source: crates/loom-templates/tests/snapshots.rs
expression: ctx.render().unwrap()
---
# Add Tasks to Existing Molecule

You are adding new tasks to an existing molecule. Your job is to identify new or
changed requirements and create tasks ONLY for those changes.

## Context Pinning

First, read the project overview to understand project terminology and context:

# Project Overview

Loom orchestrates the spec-to-implementation workflow.

## Current Feature

Label: loom-harness
Spec file: specs/loom-harness.md

## Anchor Spec

`loom-harness` is the **anchor** for this session. The anchor spec below
(`specs/loom-harness.md`) is shown for context — it's the spec that owns the
molecule, and it reflects what has already been implemented. Under
**Anchor-Driven Multi-Spec Planning**, a single `loom todo` run may also
create tasks for sibling specs in `specs/` that were touched during the plan
session; those sibling diffs appear in the Spec Diff section below.

Read the anchor spec at `specs/loom-harness.md` for the full current contents before identifying changes.

## Companions

The following companion directories are in scope. Read each one's `manifest.md` on demand:



## Scratchpad

You have a per-session scratchpad at `.wrapix/loom/scratch/<key>/scratch.md`,
where `<key>` is your session's concurrency unit — the spec label for `loom
plan` / `loom todo` sessions, the bead ID for `loom run` / `loom check` /
`loom msg` sessions. The file starts empty; append to it as the session
progresses.

**Purpose.** This is a **compaction-recovery aid, not durable storage.** The
file lives only for the lifetime of this session: the driver creates it at
session start and removes it at session end on every exit path. After
compaction, the harness re-pins the original prompt plus the scratchpad's
current contents so you regain the working notes you would otherwise have
lost.

**What to append:**

- Decisions you have made and the reasoning that tipped them, so you do not
  re-litigate them after compaction.
- Open questions you are tracking and what would resolve them.
- TODOs for the remainder of this session — files to touch next, checks to
  re-run, follow-ups inside this session's scope.
- Hypotheses you have already ruled out (with the evidence), so you do not
  re-explore them.

**What NOT to put here.** Anything that needs to outlive this session belongs
in a durable destination, not the scratchpad:

- Decisions, design rationale, or open questions that future sessions need →
  bead notes (`bd update <id> --notes "..."`) or the spec file (`specs/<label>.md`).
- Implementation context for future agents → spec file or `AGENTS.md` /
  companion docs.
- Why a change was made → the commit message.
- Cross-session follow-up work → a new bead (`bd create ...`).

The scratchpad will be deleted when this session ends. If a thought is worth
keeping past session end, write it to one of the durable destinations above
**before** you finish.

**How to append.** Append to the file directly — for example,
`echo "..." >> .wrapix/loom/scratch/<key>/scratch.md` or via the Edit tool.
Do not rewrite or truncate prior contents; the recovery payload is the full
running log.

## Spec Changes

If `spec_diff` is provided, use that to identify new requirements **across all
listed specs**; otherwise use `existing_tasks` to compare against the anchor
spec and identify gaps.

Under **per-spec cursor fan-out**, `spec_diff` may span multiple sibling specs.
Each diff block is prefixed with its spec path in the form `=== specs/<s>.md ===`
so you can attribute every new requirement to the correct spec file.

### Spec Diff (git-based)

```diff
=== specs/loom-harness.md ===
+ new requirement
```

### Existing Tasks

<agent-output>
- wx-3hhwq.1: scaffold workspace
</agent-output>

## Existing Molecule

Molecule ID: wx-3hhwq

Use `bd mol show wx-3hhwq` to see the current tasks in this molecule.
All new tasks in this session — whether they implement the anchor or a sibling
spec — bond to this molecule. Sibling specs do NOT get their own molecule.

## Instructions

1. **Identify changes** — If `spec_diff` is non-empty, focus on the added/changed
   lines in the diff across every spec listed under its `=== specs/<s>.md ===`
   headers. If `spec_diff` is empty, compare the full anchor spec against
   `existing_tasks` to find requirements that lack corresponding tasks.
2. **Create new tasks as children of the anchor's molecule**, labelling each
   task with the spec it implements (may differ from the anchor under fan-out):
   ```bash
   # <s> is the spec file the task implements, e.g. the anchor (loom-harness) or
   # a sibling label derived from specs/<sibling>.md.
   TASK_ID=$(bd create --title="<task title>" --description="<detailed description>" \
     --type=task --labels="spec:<s>,profile:<profile>" --parent="wx-3hhwq" --silent)
   ```
3. **Assign profile per-task** based on implementation needs:
   - Tasks touching `.rs` files or using cargo → `profile:rust`
   - Tasks touching `.py` files or using pytest/pip → `profile:python`
   - Tasks touching only `.nix`, `.sh`, `.md` files → `profile:base`
4. **Set execution order** with `bd dep add` if new tasks depend on existing ones:
   ```bash
   bd dep add <new-task> <existing-task>  # new-task waits for existing-task
   ```
5. **Do NOT create tasks** for requirements that already have corresponding tasks
   in the molecule

### Key Concepts

| Mechanism | Purpose | Effect |
|-----------|---------|--------|
| `--parent` | Links task to the anchor's molecule | Enables `loom status` progress tracking |
| `bd dep add` | Sets execution order | Controls what `bd ready` returns next |
| `spec:<s>` | Marks which spec file a task implements | Attributes tasks to anchor vs sibling under fan-out |
| `profile:X` | Selects container profile | Determines toolchain available in `loom run` |

## Task Breakdown Guidelines

- Each task should be **self-contained** with enough context for a fresh agent
- Consider dependencies on **existing tasks** in the molecule
- Keep tasks **focused** - one clear objective per task
- Include **test tasks** where appropriate
- **Assign profile per-task** based on what that specific task needs
- **Label each task with `spec:<s>`** identifying which spec file it implements
  — under fan-out, `<s>` may be the anchor label (`loom-harness`) or a sibling label

## Spec Index Backfill (anchor only)

After creating tasks, check if the pinned-context file (the project spec index
shown above under "Context Pinning" — `docs/README.md` by default) has an empty
Beads column for the **anchor** spec (`loom-harness`). If the Beads column is
empty, fill in the molecule ID (`wx-3hhwq`).

Sibling specs touched in this session do **not** get their own molecule — their
tasks bond to the anchor's molecule. Do **NOT** write the anchor's molecule ID
into any sibling's README Beads column; a sibling's row stays empty until it is
planned as its own anchor in a future `loom plan -u <sibling>` session.

## Exit Signals

Output ONE of these at the end of your response:

- `LOOM_COMPLETE`
- `LOOM_BLOCKED`
- `LOOM_CLARIFY`

- `LOOM_COMPLETE` — New tasks created and dependencies set. No payload.
- `LOOM_BLOCKED` — Cannot proceed (molecule not found, unclear requirements).
  Write the reason **before** the marker on its own line(s); emit
  `LOOM_BLOCKED` as the final line with nothing after it.
